fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,56 @@
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     
 
 
 } 
+main{
+    margin-top: 0;
+}
 body{
    background-color: black;
    height: fit-content;
+   padding-left: 15%;
+   padding-right: 15%;
 }
 header {
     z-index: 9999;
-    padding: 20px 35px;
     background-color: black;
     display: flex;
     justify-content: space-between;
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
-    height: 150px;
+    height: 110px;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
 .header-img {
-    height: 70px;
+    height: 85px;
     width: auto;
+    padding-bottom: 15px ;
+    margin-top: 25px;
 }
-ul{
-    margin-left: 8%;
-    margin-right: auto;
-    margin-top: 5%;
-    margin-top: 0;
-    margin-bottom: 1rem;
+ul {
+    margin-top: 85px;
+    margin-bottom: -15px;
+    margin-left: -10px;
     display: flex;
-    flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-end;
     list-style: none;
-    flex:auto;
+    flex: auto;
+    flex-direction: row;
+    font-size: 16px;
+    
+}
+li {
+    margin-left: 15px;
+    
 }
 a {
    color: white;
